style.css
/*
 Theme Name:   OCDLA
 Theme URI:    http://example.com/ocdla-theme/
 Description:  Theme for OCDLA
 Author:       John Doe
 Author URI:   http://example.com
 Template:     wireframe
 Version:      1.0.0
 License:      GNU General Public License v2 or later
 License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
 Text Domain:  wireframechild_ocdla
*/


#global-header {
	border-bottom:1px solid rgba(150,150,150,0.2);
	background-color:rgba(250,250,250,1.0);
}	

body:not(.home) .site-content-contain {
	margin-top:115px;
}

ul.gradient-background {
  zoom: 1;
  background: #36b0b6;
  background: -moz-linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #36b0b6), color-stop(100%, #2a8a8f));
  background: -webkit-linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
  background: -o-linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
  background: -ms-linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
  background: linear-gradient(top, #36b0b6 0%, #2a8a8f 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@top-color', endColorstr='@bottom-color', GradientType=0);
  padding: 5px 10px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  -ms-border-radius: 5px;
  -o-border-radius: 5px;
  border-radius: 5px;
  color:#fff !important;
}



#sidebar-left {
	width:15%;
}



.menu li {
	cursor:pointer;
}


.sidebar .menu {
	max-width: 200px;
}	
.sidebar .menu li {
	background-color: inherit;
	font-weight: 400;
	font-size: 12px;
	line-height: 2.4em;
	border-bottom: 1px solid rgba(75,58,0,0.2);
	color:rgba(0,0,0,0.9);
}



.sidebar .menu li:hover .sub-menu {

}



.sidebar .menu > li:hover {
	z-index:101;
	/* border-bottom:1px solid rgba(100,100,100,0.2);	*/
}

#sidebar-left .sub-menu li:hover {
	background-color:rgba(100,100,100,0.2);	
}

.sub-menu {
	width:300px;
	background-color: rgba(255,255,255,0.9);
	border-right: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
	border-left: 1px solid #eee;
	z-index:10;
	left:85% !important;
	top:-3px;
}

ul.sub-menu {
	padding-left:0px !important;
}

#sidebar-right {
	line-height: 2.0em;
	color: #666;
}

@media screen and(min-width: 1200px) {
	#primary {
		padding-left:4%;
		padding-right:4%;
	}
}

.sub-menu ul {
	display:none;
}

#global-header .menu li {
	transition: 
}
#global-header .menu li:hover {
	border-bottom:1px solid rgba(100,100,100,0.3);
	/* border-right:1px solid rgba(100,100,100,0.3);
	border-left:1px solid rgba(100,100,100,0.1);
	border-top:1px solid rgba(100,100,100,0.1);
	*/
}



.sub-menu li:first-child {
	padding-left: 8px;
	margin-left:-8px;
}

h6 {
	font-size:1.0rem;
}

a {
	color: rgba(0,0,139,0.8);
	font-weight:bold;
}

a:hover {
	text-decoration:underline;
}

.menu a {
	font-weight:normal;
}

.menu a:hover {
	text-decoration:none;
}

/**
  * block styles
  */
h1, h2, h3, h4, h5, h6 {
	clear:both;
}

h1 {
	font-size:1.8em;
}

h1.entry-title {
	margin-bottom:1.5em;
	font-size:2.4em;
	color:rgba(0,0,0,0.5);
}

h2 {
	color: #bf9500;/*rgba(210,149,50,1.0);*/
}

h3 {
	color:rgba(0,0,0,0.7);
}

h4 {
	text-transform:uppercase;
}

h2, h3, h4, h5, h6 {
	margin-top:3.0em;
	margin-bottom:0px;
}

h2 {
	margin-top:0;
	padding-top:2.0em;
}

h5, h6 {
	font-size: 0.83em;
}

h4, h5 {
	color: #bf9500;
}


/**
 * Handle case where nested headings create too much spacing.
 * Reduce the margin top
 */
h1 + h2 {
    margin-top: 0px;
    margin-bottom: 1.0em;
}

@media screen and (max-width:800px) {
h2 + .wp-block-image {
	padding-top:20px;
}
}

h2 {
	padding-bottom: 1.0em;
}

.bottom-spacer {
	margin-bottom: 75px;
}

